docs: update support information and add vercel config (#4)
Update WeChat support information across documentation files to include video tutorials and project codes
Add vercel.json configuration for deployment control

--- a/src/content/docs/en/quickstart.mdx
+++ b/src/content/docs/en/quickstart.mdx
@@ -413,7 +413,7 @@ Congratulations! You now have a fully functional SaaS application running locall
 
 **Need help?** 
 
-Scan the QR code to add the author's WeChat, and you will be invited to WeChat group to get more project information and usage tutorials.
+Scan the code to add the author's WeChat, you will be invited to the exclusive Q&A WeChat group to get the video tutorials and practical project codes that come with it.
 <div className="flex justify-center">
   <img src="/images/wechat.png" alt="WeChat" className="w-1/2 h-auto" />
 </div>
