--- a/src/content/docs/zh/index.mdx
+++ b/src/content/docs/zh/index.mdx
@@ -164,7 +164,7 @@ Better SaaS 非常适合：
 - **商业工具** - 开发生产力和业务管理工具
 
 ## 🤝 社区与支持
-扫码添加作者微信，邀请你进入专属微信群，获取更多项目信息和使用教程。
+扫码添加作者微信，邀请你进入专属答疑微信群，获取配套的视频教程和实战项目代码。
 <div className="flex justify-center">
   <img src="/images/wechat.png" alt="WeChat" className="w-1/2 h-auto" />
 </div>
