--- a/src/content/docs/zh/quickstart.mdx
+++ b/src/content/docs/zh/quickstart.mdx
@@ -397,7 +397,7 @@ nvm use 18
 
 恭喜！您现在拥有一个在本地运行的完全功能的 SaaS 应用程序。构建下一个伟大产品的基础已经奠定。
 
-**需要帮助？** 扫码添加作者微信，邀请你进入专属微信群，获取更多项目信息和使用教程。
+**需要帮助？** 扫码添加作者微信，邀请你进入专属答疑微信群，获取配套的视频教程和实战项目代码。
 <div className="flex justify-center">
   <img src="/images/wechat.png" alt="WeChat" className="w-1/2 h-auto" />
 </div>
