feat(file-manager): add github icon and i18n support for file manager
refactor: remove config page and related navigation items
style: clean up commented code and improve formatting

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -95,6 +95,33 @@
     "recentActivity": "Recent Activity",
     "latestActivity": "Your latest account activity"
   },
+  "fileManager": {
+    "title": "R2 Image/Video Management",
+    "description": "Browse all files uploaded by users (Admin only).",
+    "uploadFile": "Upload File",
+    "uploadFiles": "Upload Files",
+    "cancel": "Cancel",
+    "uploading": "Uploading...",
+    "dragDropText": "Drag images here, or click to select images",
+    "dragActiveText": "Drop images to upload",
+    "supportedFormats": "Only JPEG and PNG images are supported, maximum {maxSize}MB per file",
+    "selectImages": "Select Images",
+    "uploadFailed": "File upload failed",
+    "fileTooLarge": "File too large",
+    "invalidFileType": "Only JPEG and PNG images are supported",
+    "tooManyFiles": "Too many files",
+    "noFiles": "No image files",
+    "uploadSomeFiles": "Upload some images to start managing your files",
+    "searchPlaceholder": "Filter by filename prefix...",
+    "preview": "Preview",
+    "download": "Download",
+    "delete": "Delete",
+    "type": "Type",
+    "size": "Size",
+    "uploadUser": "Upload User",
+    "lastModified": "Last Modified",
+    "image": "IMAGE"
+  },
   "hero": {
     "heading": "The Ultimate Scalable Next.js SaaS Boilerplate",
     "description": "Start your SaaS journey with our production-ready Next.js boilerplate. Slash development time and deliver value to your customers faster. Build, launch, and scale with unmatched speed and confidence.",
@@ -167,7 +194,6 @@
     "dashboard": "Dashboard",
     "users": "Users",
     "files": "File Manager",
-    "config": "Configuration",
     "settings": "Settings",
     "profile": "Profile",
     "billing": "Billing",
