--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -95,6 +95,33 @@
     "recentActivity": "最近活动",
     "latestActivity": "您的最新账户活动"
   },
+  "fileManager": {
+    "title": "R2 图片/视频管理",
+    "description": "浏览用户上传的所有文件（仅管理员）。",
+    "uploadFile": "上传文件",
+    "uploadFiles": "上传文件",
+    "cancel": "取消",
+    "uploading": "正在上传...",
+    "dragDropText": "拖拽图片到这里，或点击选择图片",
+    "dragActiveText": "放开图片即可上传",
+    "supportedFormats": "仅支持 JPEG 和 PNG 格式的图片，单个文件最大 {maxSize}MB",
+    "selectImages": "选择图片",
+    "uploadFailed": "文件上传失败",
+    "fileTooLarge": "文件过大",
+    "invalidFileType": "仅支持 JPEG 和 PNG 格式的图片",
+    "tooManyFiles": "文件数量过多",
+    "noFiles": "暂无图片文件",
+    "uploadSomeFiles": "上传一些图片来开始管理您的文件",
+    "searchPlaceholder": "按文件名前缀过滤...",
+    "preview": "预览",
+    "download": "下载",
+    "delete": "删除",
+    "type": "类型",
+    "size": "大小",
+    "uploadUser": "上传用户",
+    "lastModified": "最后修改",
+    "image": "图片"
+  },
   "hero": {
     "heading": "终极可扩展的 Next.js SaaS 模板",
     "description": "使用我们生产就绪的 Next.js 模板开始您的 SaaS 之旅。大幅缩短开发时间，更快地为客户提供价值。以无与伦比的速度和信心构建、启动和扩展。",
@@ -167,7 +194,6 @@
     "dashboard": "仪表板",
     "users": "用户",
     "files": "文件管理",
-    "config": "配置",
     "settings": "设置",
     "profile": "个人资料",
     "billing": "账单",
