--- a/src/content/docs/zh/features/file-management.mdx
+++ b/src/content/docs/zh/features/file-management.mdx
@@ -160,7 +160,7 @@ import { db } from '@/server/db'
 import { files, folders } from '@/server/db/schema'
 import { eq, and } from 'drizzle-orm'
 import sharp from 'sharp'
-import { nanoid } from 'nanoid'
+import { v4 as uuidv4 } from 'uuid'
 
 export class FileService {
   private static instance: FileService
@@ -193,7 +193,7 @@ export class FileService {
 
     // 生成唯一键
     const fileExtension = file.name.split('.').pop()
-    const key = `${userId}/${nanoid()}.${fileExtension}`
+    const key = `${userId}/${uuidv4()}.${fileExtension}`
 
     // 转换文件为缓冲区
     const buffer = Buffer.from(await file.arrayBuffer())
@@ -208,7 +208,7 @@ export class FileService {
     }
 
     // 保存到数据库
-    const fileId = nanoid()
+    const fileId = uuidv4()
     await db.insert(files).values({
       id: fileId,
       userId,
@@ -291,7 +291,7 @@ export class FileService {
   }
 
   async createFolder(name: string, userId: string, parentId?: string) {
-    const folderId = nanoid()
+    const folderId = uuidv4()
     await db.insert(folders).values({
       id: folderId,
       name,
@@ -790,7 +790,7 @@ import { headers } from "next/headers"
 import { db } from "@/server/db"
 import { fileShares, files } from "@/server/db/schema"
 import { eq, and } from "drizzle-orm"
-import { nanoid } from "nanoid"
+import { v4 as uuidv4 } from "uuid"
 
 export async function shareFile(
   fileId: string,
@@ -815,8 +815,8 @@ export async function shareFile(
     throw new Error("文件未找到")
   }
 
-  const shareToken = nanoid(32)
-  const shareId = nanoid()
+  const shareToken = uuidv4().replace(/-/g, '')
+  const shareId = uuidv4()
 
   await db.insert(fileShares).values({
     id: shareId,
