--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -197,6 +197,7 @@
     "settings": "设置",
     "profile": "个人资料",
     "billing": "账单",
+    "services":"服务",
     "security": "安全",
     "credits": "积分",
     "balance": "余款",
@@ -205,7 +206,7 @@
   },
   "navbar": {
     "logo": {
-      "title": "Better SaaS",
+      "title": "Suit Photo",
       "alt": "logo"
     },
     "menu": {
@@ -284,6 +285,36 @@
       "description": "要更改您的邮箱，请输入新邮箱并点击保存。您需要确认新邮箱才能生效。",
       "placeholder": "输入您的邮箱地址"
     }
+  },
+  "billing":{
+    "title":"账单",
+    "description":"管理您的订阅和付款历史",
+    "current_plan":"当前计划",
+    "current_no_plan":"没有计划",
+    "goto_plan":"您可以在定价页面选择适合的订阅计划",
+    "current_payment":"付款历史",
+    "all_payment_history":"所有付款记录",
+    "no_payment_history":"暂无付款记录",
+    "get_billing_info_failed":"获取账单信息失败",
+    "no_subscription_info":"没有找到订阅信息",
+    "sync_subscription_success":"订阅信息同步成功",
+    "sync_subscription_failed":"订阅信息同步失败",
+    "payment_success_active":"付款成功！您的订阅已激活。",
+    "payment_success_canceled":"付款取消。您可以随时重新订阅。",
+    "unknow":"未知",
+    "active":"活跃",
+    "trial":"试用中",
+    "past_due":"逾期",
+    "canceled":"已取消",
+    "incomplete":"未完成",
+    "syncing":"同步中...",
+    "sync_subscription_info":"同步订阅信息",
+    "subscription":"订阅",
+    "one_time_payment":"一次性付款",
+    "month_payment":"月付",
+    "year_payment":"年付",
+    "billing_cycle":"计费周期",
+    "price_id":"价格ID"
   },
   "security": {
     "title": "安全",
